--- a/TP HTML/index.html
+++ b/TP HTML/index.html
@@ -75,7 +75,7 @@
             <ul>
                 <li><a href="/Carta">Carta</a></li>
                 <li><a href="/contacto">Contacto</a></li>
-                <li><a href="/Direccion">Direccion</a></li>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1642.6278684126203!2d-58.4215189!3d-34.5723951!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1697927953424!5m2!1ses!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
 
