--- a/TP HTML/index.html
+++ b/TP HTML/index.html
@@ -33,7 +33,7 @@
              <div class="hero-content">
                 <h2 class="hero-title text-serif"> Pasion por la comida italiana!
                 </h2>
-                <button class="hero-button">Reserva ahora</button>
+                <button class="hero-button"id="reserva-button" href="#">Reserva ahora</button>
              </div>
         </seccion>
 
@@ -85,6 +85,7 @@
         </div>
 
      </footer>
+     <script src="scripts/index reserva.js"></script>
      </body>
     </html>
      
