--- a/TP HTML/index.html
+++ b/TP HTML/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="contact.html" rel="import" />
+    <link rel="import" href="contact.html" />
 
 </head>
 <body>
@@ -34,7 +34,7 @@
              <div class="hero-content">
                 <h2 class="hero-title text-serif"> Pasion por la comida italiana!
                 </h2>
-                <button class="hero-button"id="reserva-button" href="#">Reserva ahora</button>
+                <button class="hero-button"id="reserva-button" a href="reserva.html">Reserva ahora</button>
              </div>
         </seccion>
 
@@ -74,9 +74,9 @@
         </div>
         <div class="links">
             <ul>
-                <li><a href="/Carta">Carta</a></li>
-                <li><a href="/contacto">Contacto</a></li>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1642.6278684126203!2d-58.4215189!3d-34.5723951!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1697927953424!5m2!1ses!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <li><a href="carta.html">Carta</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1642.6278684126203!2d-58.4215189!3d-34.5723951!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1697927953424!5m2!1ses!2sar" width="250" height="250" style="border:3;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
 
