--- a/TP HTML/index.html
+++ b/TP HTML/index.html
@@ -34,7 +34,8 @@
              <div class="hero-content">
                 <h2 class="hero-title text-serif"> Pasion por la comida italiana!
                 </h2>
-                <button class="hero-button"id="reserva-button" a href="reserva.html">Reserva ahora</button>
+                <a class="hero-button"id="reserva-button" href="reserva.html">Reserva ahora</a>
+              
              </div>
         </seccion>
 
